objects/Opportunity_Partners__c/Opportunity_Partners__c.object-meta.xml
<CustomObject>
    <label>Opportunity Partners</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Opportunity Partners Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>