objects/Opportunity_Partners__c/fields/Actively_engaged_in_strategy_content__c.field-meta.xml
<CustomField>
    <fullName>Actively_engaged_in_strategy_content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated from SS-14659
Question 2</description>
    <inlineHelpText>Which Partner is the most engaged in developing sales strategy &amp; content, and in presenting to the customer either independently or with Tanium account resources, throughout the entire sales cycle</inlineHelpText>
    <label>DEPRECATED - Actively engaged in strat</label>
    <type>Checkbox</type>
</CustomField>