objects/Opportunity_Partners__c/fields/Collaboration_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Agreement__c</fullName>
    <label>DEPRECATED - Opportunity Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Created</fullName>
            </value>
            <value>
                <fullName>Partner Created</fullName>
            </value>
            <value>
                <fullName>Non-Registered</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>