objects/Opportunity_Partners__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>INC0180752



05/13/2024 - Label changed as a part of the FY25 Partner Redesign project. Jira ticket SS--7685. Fields will be removed at a future date, likely in FY26.</description>
    <formula>Opportunity__r.Amount * Partner_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated using the Quote Amount from the opportunity multiplied by the Partner Commission</inlineHelpText>
    <label>DEPRECATED - Commission Amount (formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>