objects/Opportunity_Partners__c/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Registration</label>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Opportunity Partners</relationshipLabel>
    <relationshipName>Opportunity_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>