objects/Opportunity_Partners__c/fields/Distributor_Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Opportunity_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Opportunity Partner</label>
    <type>Checkbox</type>
</CustomField>