objects/Opportunity_Partners__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>INC0132538 Nick Scala can be retired, data from Collaboration Agreements are not needed.  Use formula field for opp reg.</description>
    <label>Opportunity Partner Expiration Date OBS</label>
    <type>Date</type>
</CustomField>