objects/Opportunity_Partners__c/fields/Incumbent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Implemented as a part of the MSP Simplification and FY25 Partner Redesign projects. Jira ticket SS-7727</description>
    <inlineHelpText>When this box is checked, it indicates that this partner was the partner of record on the quote related to the contract that this opportunity renews.</inlineHelpText>
    <label>Incumbent Partner</label>
    <type>Checkbox</type>
</CustomField>