objects/Opportunity_Partners__c/fields/Incumbent_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Partner_Override__c</fullName>
    <description>Implemented as a part of the MSP Simplification and FY25 Partner Redesign projects. Jira ticket SS-8602</description>
    <inlineHelpText>When this field is not blank, it will override the value of the Incumbent Partner field which is programmatically updated to indicate that this partner was the partner of record on the quote related to the contract that this opportunity renews.</inlineHelpText>
    <label>Incumbent Partner Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>