objects/Opportunity_Partners__c/fields/Influence_Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Influence_Partner_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Creator</label>
    <type>Checkbox</type>
</CustomField>