objects/Opportunity_Partners__c/fields/Integrated_non_Tanium_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Integrated_non_Tanium_Products_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated from SS-12659</description>
    <inlineHelpText>Which Partner brought together other (non-Tanium) critical products/ services to complete the solution for the customer</inlineHelpText>
    <label>DEPRECATED - Integrated non-Tanium Prod</label>
    <type>Checkbox</type>
</CustomField>