objects/Opportunity_Partners__c/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrator</label>
    <type>Checkbox</type>
</CustomField>