objects/Opportunity_Partners__c/fields/Involved_in_RFP_Creation__c.field-meta.xml
<CustomField>
    <fullName>Involved_in_RFP_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated from SS-14659
Question 3</description>
    <inlineHelpText>Which Partner helped prepare the RFP and/or owns the completion of the response to the customer</inlineHelpText>
    <label>DEPRECATED - Involved in RFP Creation</label>
    <type>Checkbox</type>
</CustomField>