objects/Opportunity_Partners__c/fields/isRecordManuallyCreated__c.field-meta.xml
<CustomField>
    <fullName>isRecordManuallyCreated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Jira “SS-7792” for details</description>
    <inlineHelpText>Indicates if Opportunity Partner records are manually created or not</inlineHelpText>
    <label>isRecordManuallyCreated</label>
    <type>Checkbox</type>
</CustomField>