objects/Opportunity_Partners__c/fields/Opportunity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is implemented as a part of Project Fulcrum. Jira ticker SS-7828</description>
    <inlineHelpText>This is the manager of the opportunity owner. This user will be the first person in the Opportunity Partner approval chain</inlineHelpText>
    <label>Opportunity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>