objects/Opportunity_Partners__c/fields/Opportunity_Partner_18ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner_18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Partner 18ID</label>
    <type>Text</type>
</CustomField>