objects/Opportunity_Partners__c/fields/Opportunity_Registration__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED - Opportunity Reg (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunity Partners</relationshipLabel>
    <relationshipName>Opportunity_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>