objects/Opportunity_Partners__c/fields/Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission__c</fullName>
    <description>05/13/2024 - Label changed as a part of the FY25 Partner Redesign project. Jira ticket SS--7685. Fields will be removed at a future date, likely in FY26.</description>
    <label>DEPRECATED - Partner Commission %</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>