objects/Opportunity_Partners__c/fields/Partner_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Maturity__c</fullName>
    <formula>TEXT(Account__r.Partner_Maturity__c)</formula>
    <label>Partner Status</label>
    <type>Text</type>
</CustomField>