objects/Opportunity_Partners__c/fields/Partner_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name_text__c</fullName>
    <description>Populated via a workflow rule. Used in rollup summary field to allow easy reporting from Opportunity</description>
    <label>Partner Name (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>