objects/Opportunity_Partners__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Creator</fullName>
            </value>
            <value>
                <fullName>Partner Co-Sell</fullName>
            </value>
            <value>
                <fullName>Supply chain/Procurement</fullName>
                <default>true</default>
                <label>Supply chain/Procurement</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Deployment Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>