objects/Opportunity_Partners__c/fields/Partner_Sourced_Opp_Reg__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced_Opp_Reg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implemented as a part of FY25 Partner Redesign</description>
    <inlineHelpText>Select an Opp Reg record that was previously Partner Sourced by the partner. This will provide the partner an additional discount on Authorized quotes</inlineHelpText>
    <label>DEPRECATED - Partner Sourced Opp Reg</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120e000000kuOjAAI</value>
        </filterItems>
        <filterItems>
            <field>Lead.wi__Associated_Partner__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunity Partners (Partner Sourced Opp Reg)</relationshipLabel>
    <relationshipName>Opportunity_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>