objects/Opportunity_Partners__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <formula>IF(OR(Account__c=Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__Partner__c,
Account__c=Opportunity__r.SBQQ__PrimaryQuote__r.Downstream_Reseller__c),
TRUE,FALSE)</formula>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>