objects/Opportunity_Partners__c/fields/Provided_Consistent_Value__c.field-meta.xml
<CustomField>
    <fullName>Provided_Consistent_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-12659</description>
    <inlineHelpText>Which Partner provided CONSISTENT business value (pre-sales, business relationship, Tanium value messaging to the customer) or technical value (Tanium Demo, Proof of Concept, Whiteboarding) to help Tanium win the business?</inlineHelpText>
    <label>Provided Consistent Value</label>
    <type>Checkbox</type>
</CustomField>