objects/Opportunity_Partners__c/fields/Reseller_Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Opportunity_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Opportunity Partner</label>
    <type>Checkbox</type>
</CustomField>