objects/Opportunity_Partners__c/fields/Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model__c</fullName>
    <formula>TEXT(Account__r.Sales_Model__c)</formula>
    <label>Purchasing Model</label>
    <type>Text</type>
</CustomField>