objects/Opportunity_Partners__c/fields/Sales_Relationships_w_decision_makers__c.field-meta.xml
<CustomField>
    <fullName>Sales_Relationships_w_decision_makers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated from SS-12659 
Question 1</description>
    <inlineHelpText>Which Partner has the most previously successful sales relationships with key decision-makers in the account</inlineHelpText>
    <label>DEPRECATED - Sales Relationships w/ de</label>
    <type>Checkbox</type>
</CustomField>