objects/Opportunity_Partners__c/fields/Sell_Through__c.field-meta.xml
<CustomField>
    <fullName>Sell_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATED - Sell Through</label>
    <type>Checkbox</type>
</CustomField>