objects/Opportunity_Partners__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique ID field used to prevent the creation of duplicate Opp Partner records</description>
    <label>UniqueId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>