objects/Opportunity_Partners__c/validationRules/Account_Must_Be_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_Be_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Account__r.RecordType.DeveloperName != &apos;Partner&apos;,
    NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorMessage>Selection is not a Partner account. Please select account where Account Record Type is Partner.</errorMessage>
</ValidationRule>