objects/Opportunity_Partners__c/validationRules/Cannot_update_partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_partner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;Super User&quot;,
$Profile.Name &lt;&gt; &quot;Tanium Partner Portal Admin&quot;,
$Profile.Name &lt;&gt; &quot;Tanium System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Tanium Standard User&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISBLANK( Opportunity_Registration__c ))
)
/*
AND(
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;Super User&quot;,
$Profile.Name &lt;&gt; &quot;Tanium Partner Portal Admin&quot;,
$Profile.Name &lt;&gt; &quot;Tanium System Administrator&quot;,
NOT(ISBLANK( Opportunity_Registration__c ))
)
*/</errorConditionFormula>
    <errorMessage>This OppPartner cannot be edited as it was created via an approved Opportunity Registration. Please contact your Sales Ops business partner if you feel an adjustment is needed.</errorMessage>
</ValidationRule>