objects/Opportunity_Partners__c/validationRules/Commission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Sell_Through__c=false,(Partner_Commission_Amount__c!=ROUND((Opportunity__r.Amount *  Partner_Commission__c),0)))</errorConditionFormula>
    <errorMessage>Commission Amount does not match Commission %, please click the calculate button to recalculate</errorMessage>
</ValidationRule>