objects/Opportunity_Partners__c/validationRules/Prevent_Stad_Users_from_Adding_greater_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Stad_Users_from_Adding_greater_0</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR($Profile.Name = &quot;Tanium Standard User&quot;, 
$Profile.Name = &quot;Tanium Inside Sales&quot;), 
OR( 
Commission_Amount__c &gt; 0, 
Partner_Commission__c &gt;0, 
TEXT(Collaboration_Agreement__c)=&quot;Teaming&quot;, 
TEXT(Collaboration_Agreement__c)=&quot;Registration&quot;) 
)</errorConditionFormula>
    <errorMessage>You do not have permission to add a partner with commission.</errorMessage>
</ValidationRule>