objects/Opportunity_Partners__c/validationRules/Renewal_Action_Plan_Just_for_Incumbent.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Action_Plan_Just_for_Incumbent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Renewal_Action_Plan_Confirmed__c),
    Renewal_Action_Plan_Confirmed__c,
    NOT(Incumbent_Partner__c),
    NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Renewal_Action_Plan_Confirmed__c</errorDisplayField>
    <errorMessage>It&apos;s only necessary to confirm that a Renewal Action Plan is in place for an incumbent partner.</errorMessage>
</ValidationRule>