objects/Opportunity_Partners__c/validationRules/TAM_on_Opportunity_Partner_Role_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>TAM_on_Opportunity_Partner_Role_Only</fullName>
    <active>false</active>
    <description>TAMs can only create Opportunity Partner records with &quot;Technology&quot; partner role only.</description>
    <errorConditionFormula>AND(
$Profile.Name = &quot;TAM&quot;,
ISNEW(),
NOT(ISPICKVAL(Partner_Role__c,&quot;Technology&quot;))
)</errorConditionFormula>
    <errorDisplayField>Partner_Role__c</errorDisplayField>
    <errorMessage>You can only select a value of “Technology” in the Partner Role field.</errorMessage>
</ValidationRule>