objects/Opportunity_Partners__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Partner_Role__c</columns>
    <columns>Partner_Commission__c</columns>
    <columns>Collaboration_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>